# i-love-study

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  style.css  utils.py
geektime/: course.py  geekt.py  request.py
lagou/: course.py  lago.py  request.py
