[tool.poetry]
name = "i-love-study-worker"
version = "0.1.0"
description = ""
authors = ["SkyAo <csvwolf@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
pandoc = "^2.2"
requests = "^2.27.1"
markdownify = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
